Change Base64 class
(cherry picked from commit 9ec3955f0b981871a796704826cebd7cf28c3a1c)